@@ -17,37 +17,38 @@ import uk.gov.hmcts.reform.judicialapi.controller.advice.ResourceNotFoundExcepti
 import uk.gov.hmcts.reform.judicialapi.controller.advice.UserProfileException;
 import uk.gov.hmcts.reform.judicialapi.controller.request.RefreshRoleRequest;
 import uk.gov.hmcts.reform.judicialapi.controller.request.UserSearchRequest;
+import uk.gov.hmcts.reform.judicialapi.controller.response.AppointmentRefreshResponse;
+import uk.gov.hmcts.reform.judicialapi.controller.response.AuthorisationRefreshResponse;
 import uk.gov.hmcts.reform.judicialapi.controller.response.LrdOrgInfoServiceResponse;
 import uk.gov.hmcts.reform.judicialapi.controller.response.OrmResponse;
+import uk.gov.hmcts.reform.judicialapi.controller.response.UserProfileRefreshResponse;
 import uk.gov.hmcts.reform.judicialapi.controller.response.UserSearchResponse;
 import uk.gov.hmcts.reform.judicialapi.domain.Appointment;
 import uk.gov.hmcts.reform.judicialapi.domain.Authorisation;
 import uk.gov.hmcts.reform.judicialapi.domain.JudicialRoleType;
-import uk.gov.hmcts.reform.judicialapi.domain.UserProfile;
 import uk.gov.hmcts.reform.judicialapi.domain.RegionMapping;
 import uk.gov.hmcts.reform.judicialapi.domain.ServiceCodeMapping;
-import uk.gov.hmcts.reform.judicialapi.repository.ServiceCodeMappingRepository;
+import uk.gov.hmcts.reform.judicialapi.domain.UserProfile;
+import uk.gov.hmcts.reform.judicialapi.feign.LocationReferenceDataFeignClient;
 import uk.gov.hmcts.reform.judicialapi.repository.RegionMappingRepository;
+import uk.gov.hmcts.reform.judicialapi.repository.ServiceCodeMappingRepository;
 import uk.gov.hmcts.reform.judicialapi.repository.UserProfileRepository;
 import uk.gov.hmcts.reform.judicialapi.service.JudicialUserService;
 import uk.gov.hmcts.reform.judicialapi.util.JsonFeignResponseUtil;
 import uk.gov.hmcts.reform.judicialapi.util.RefDataConstants;
 import uk.gov.hmcts.reform.judicialapi.util.RequestUtils;
 import uk.gov.hmcts.reform.judicialapi.validator.RefreshUserValidator;
-import uk.gov.hmcts.reform.judicialapi.controller.response.UserProfileRefreshResponse;
-import uk.gov.hmcts.reform.judicialapi.controller.response.AppointmentRefreshResponse;
-import uk.gov.hmcts.reform.judicialapi.controller.response.AuthorisationRefreshResponse;
-import uk.gov.hmcts.reform.judicialapi.feign.LocationReferenceDataFeignClient;
 
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import static java.util.Objects.nonNull;
 import static uk.gov.hmcts.reform.judicialapi.util.RefDataUtil.createPageableObject;
+import static uk.gov.hmcts.reform.judicialapi.util.RefDataUtil.distinctByKeys;
 
 @Slf4j
 @Service
@@ -94,7 +95,7 @@ public class JudicialUserServiceImpl implements JudicialUserService {
 
         List<OrmResponse> ormResponses = userProfiles.stream()
                 .map(OrmResponse::new)
-                .collect(Collectors.toList());
+                .toList();
 
         return ResponseEntity
                 .status(200)
@@ -118,7 +119,7 @@ public class JudicialUserServiceImpl implements JudicialUserService {
                         userSearchRequest.getServiceCode(), userSearchRequest.getLocation(), ticketCode);
 
         var userSearchResponses = userProfiles
-                .stream()
+                .stream().filter(distinctByKeys(UserProfile::getPersonalCode))
                 .map(UserSearchResponse::new)
                 .collect(Collectors.toUnmodifiableList());
 
@@ -139,8 +140,7 @@ public class JudicialUserServiceImpl implements JudicialUserService {
                 sortDirection, sortColumn, refreshDefaultPageSize, refreshDefaultSortColumn,
                 UserProfile.class);
 
-        return (refreshRoleRequest != null) ? getRefreshUserProfileBasedOnParam(refreshRoleRequest, pageRequest)
-                : refreshUserProfileBasedOnAll(pageRequest);
+        return getRefreshUserProfileBasedOnParam(refreshRoleRequest, pageRequest);
 
     }
 
@@ -155,9 +155,11 @@ public class JudicialUserServiceImpl implements JudicialUserService {
         } else if (refreshUserValidator.isListNotEmptyOrNotNull(refreshRoleRequest.getObjectIds())) {
             return refreshUserProfileBasedOnObjectIds(
                     refreshUserValidator.removeEmptyOrNullFromList(refreshRoleRequest.getObjectIds()), pageRequest);
-        } else {
-            return refreshUserProfileBasedOnAll(pageRequest);
+        } else if (refreshUserValidator.isListNotEmptyOrNotNull(refreshRoleRequest.getPersonalCodes())) {
+            return refreshUserProfileBasedOnPersonalCodes(refreshUserValidator.removeEmptyOrNullFromList(
+                    refreshRoleRequest.getPersonalCodes()), pageRequest);
         }
+        return new ResponseEntity<>(HttpStatus.OK);
     }
 
     @SuppressWarnings("unchecked")
@@ -192,17 +194,17 @@ public class JudicialUserServiceImpl implements JudicialUserService {
     }
 
     @SuppressWarnings("unchecked")
-    private ResponseEntity<Object> refreshUserProfileBasedOnAll(PageRequest pageRequest) {
-        log.info("{} : starting refreshUserProfile BasedOn All ", loggingComponentName);
-
-        var userProfilePage = userProfileRepository.fetchUserProfileByAll(pageRequest);
-
+    private ResponseEntity<Object> refreshUserProfileBasedOnPersonalCodes(List<String> personalCodes,
+                                                                          PageRequest pageRequest) {
+        log.info("{} : starting refreshUserProfile BasedOn personalCodes ", loggingComponentName);
+        var userProfilePage = userProfileRepository.fetchUserProfileByPersonalCodes(
+                personalCodes, pageRequest);
         if (userProfilePage == null || userProfilePage.isEmpty()) {
-            log.error("{}:: No data found in JRD ", loggingComponentName);
+            log.error("{}:: No data found in JRD for the personalCodes {}",
+                    loggingComponentName, personalCodes);
             throw new ResourceNotFoundException(RefDataConstants.NO_DATA_FOUND);
         }
-
-        return getRefreshRoleResponseEntity(userProfilePage, "", "All");
+        return getRefreshRoleResponseEntity(userProfilePage, personalCodes, "personalCodes");
     }
 
     private ResponseEntity<Object> getRefreshRoleResponseEntity(Page<UserProfile> userProfilePage,
@@ -233,12 +235,16 @@ public class JudicialUserServiceImpl implements JudicialUserService {
                 .objectId(v.get(0).getObjectId())
                 .knownAs(v.get(0).getKnownAs())
                 .postNominals(v.get(0).getPostNominals())
+                .personalCode(v.get(0).getPersonalCode())
+                .isJudge(v.get(0).getIsJudge())
+                .isPanelNumber(v.get(0).getIsPanelNumber())
+                .isMagistrate(v.get(0).getIsMagistrate())
                 .appointments(v.stream()
                         .flatMap(i -> i.getAppointments().stream())
-                        .collect(Collectors.toList()))
+                        .toList())
                 .authorisations(v.stream()
                         .flatMap(i -> i.getAuthorisations().stream())
-                        .collect(Collectors.toList()))
+                        .toList())
                 .build()));
 
         log.info("userProfileList size = {}", userProfileList.size());
@@ -320,9 +326,20 @@ public class JudicialUserServiceImpl implements JudicialUserService {
                 .fullName(profile.getFullName())
                 .postNominals(profile.getPostNominals())
                 .emailId(profile.getEjudiciaryEmailId())
-                .appointments(getAppointmentRefreshResponseList(profile,regionMappings))
-                .authorisations(getAuthorisationRefreshResponseList(profile,serviceCodeMappings))
+                .personalCode(profile.getPersonalCode())
+                .isJudge(getStringValueFromBoolean(profile.getIsJudge()))
+                .isPanelNumber(getStringValueFromBoolean(profile.getIsPanelMember()))
+                .isMagistrate(getStringValueFromBoolean(profile.getIsMagistrate()))
+                .appointments(getAppointmentRefreshResponseList(profile, regionMappings))
+                .authorisations(getAuthorisationRefreshResponseList(profile, serviceCodeMappings))
                 .build();
+    }
+
+    private String getStringValueFromBoolean(Boolean value) {
+        if (value != null) {
+            return value ? "Y" : "N";
+        }
+        return "";
     }
 
     private List<AppointmentRefreshResponse> getAppointmentRefreshResponseList(
@@ -361,6 +378,9 @@ public class JudicialUserServiceImpl implements JudicialUserService {
                 .roles(getRoleIdList(profile.getJudicialRoleTypes()))
                 .startDate(null != appt.getStartDate() ? String.valueOf(appt.getStartDate()) : null)
                 .endDate(null != appt.getEndDate() ? String.valueOf(appt.getEndDate()) : null)
+                .primaryLocation(appt.getPrimaryLocation())
+                .secondaryLocation(appt.getSecondaryLocation())
+                .tertiaryLocation(appt.getTertiaryLocation())
                 .build();
     }
 
@@ -381,16 +401,16 @@ public class JudicialUserServiceImpl implements JudicialUserService {
             Authorisation auth, List<ServiceCodeMapping> serviceCodeMappings) {
         log.info("{} : starting build Authorisation Refresh Response Dto ", loggingComponentName);
 
-        String serviceCode = serviceCodeMappings.stream()
+        List<String> serviceCode = serviceCodeMappings.stream()
                 .filter(s -> s.getTicketCode().equalsIgnoreCase(auth.getTicketCode()))
                 .map(ServiceCodeMapping::getServiceCode)
-                .collect(Collectors.joining(","));
+                .toList();
 
         return AuthorisationRefreshResponse.builder()
                 .jurisdiction(auth.getJurisdiction())
                 .ticketDescription(auth.getLowerLevel())
                 .ticketCode(auth.getTicketCode())
-                .serviceCode(serviceCode)
+                .serviceCodes(serviceCode)
                 .startDate(null != auth.getStartDate() ? String.valueOf(auth.getStartDate()) : null)
                 .endDate(null != auth.getEndDate() ? String.valueOf(auth.getEndDate()) : null)
                 .build();
@@ -405,7 +425,7 @@ public class JudicialUserServiceImpl implements JudicialUserService {
         log.info("{} : starting get RoleId List ", loggingComponentName);
         return judicialRoleTypes.stream()
                 .filter(e -> e.getEndDate() == null || !e.getEndDate().toLocalDate().isBefore(LocalDate.now()))
-                .map(JudicialRoleType::getTitle).collect(Collectors.toList());
+                .map(JudicialRoleType::getTitle).toList();
     }
 
 }
